fix modal style

--- a/client/src/components/TogglerTheme/togglerTheme.css
+++ b/client/src/components/TogglerTheme/togglerTheme.css
@@ -4,9 +4,11 @@
     transform: translate(-50%, -50%);
     margin-top: 20px;
 }
-input {
+
+#toggler {
     display: none;
 }
+
 .slider {
     position: absolute;
     top: 0;
