--- a/client/src/components/Layout/layout.css
+++ b/client/src/components/Layout/layout.css
@@ -1,4 +1,13 @@
-.content-container {
+
+/* .content-container {
     min-width: 100vw;
     min-height: calc(100vh - 120px);
+} */
+/* .app-contain {
+} */
+
+.content-container {
+    max-width: 1200px;
+    margin: 0 auto;
 }
+
