--- a/client/src/index.css
+++ b/client/src/index.css
@@ -13,7 +13,7 @@
 }
 
 :root[data-theme="dark"] {
-  --bg-header: #2b3e51;
+  --bg-header: #394a4d;
   --color-text: white;
   --color-setting-btn: white;
   --option-bg: rgb(154, 237, 248);
