--- a/client/src/components/Header/header.css
+++ b/client/src/components/Header/header.css
@@ -30,6 +30,17 @@
     display: flex;
 }
 
+.header__logo {
+    content: '';
+    position: absolute;
+    z-index: 0;
+    top: 4px;
+    left: 4px;
+    width: 50px;
+    height: 50px;
+    background: url(./../../assets/img/logo.png) top left / contain no-repeat;
+}
+
 .header__home-button a {
     color: var(--color-text);
     text-decoration: none;
