--- a/client/src/index.css
+++ b/client/src/index.css
@@ -7,9 +7,15 @@
 :root[data-theme="light"] {
   --bg-header: white;
   --color-text: black;
+  --color-setting-btn: #2b3e51;
+  --option-bg: #2b3e51;
+  --option-text: white;
 }
 
 :root[data-theme="dark"] {
   --bg-header: #2b3e51;
   --color-text: white;
+  --color-setting-btn: white;
+  --option-bg: rgb(154, 237, 248);
+  --option-text: black;
 }
