--- a/client/src/app.css
+++ b/client/src/app.css
@@ -1,3 +1,21 @@
-.app {
-  text-align: center;
+.app  {
+    text-align: center;
+    position: relative;
+    font-family: Roboto, sans-serif;
 }
+  
+.app::before {
+    content: ' ';
+    display: block;
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    opacity: 0.2;
+    z-index: -10;
+    background-image: url(./assets/desc_bg.jpeg);
+    background-repeat: no-repeat;
+    background-position: 50% 0;
+    background-size: cover;
+  }
