--- a/client/src/components/Header/header.css
+++ b/client/src/components/Header/header.css
@@ -3,21 +3,17 @@
     height: 60px;
     width: 100%;
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
     align-items: center;
-}
-.header__logo {
-    font-family: 'Allura', cursive;
-    font-size: 40px;
+    max-width: 1200px;
+    margin: 0 auto;
+    padding: 0 20px;
+    border-radius: 5px;
 }
 
 .header__logo span {
     color: rgba(255, 87, 87, 0.747);
 }
-
-/* .header__container {
-    max-width: 1200px;
-} */
 
 .header__button-block {
     display: flex;
@@ -30,18 +26,29 @@
     display: flex;
 }
 
-.header__logo {
-    content: '';
-    position: absolute;
-    z-index: 0;
-    top: 4px;
-    left: 4px;
-    width: 50px;
-    height: 50px;
-    background: url(./../../assets/img/logo.png) top left / contain no-repeat;
-}
-
 .header__home-button a {
     color: var(--color-text);
     text-decoration: none;
 }
+
+.header__logo {
+    position: relative;
+    font-family: "Neucha", cursive;
+    font-size: 40px;
+    font-weight: 700;
+    padding-left: 20px;
+}
+
+/* .header__logo::after {
+    content: '';
+    display: block;
+    position: absolute;
+    right: -7px;
+    top: -7px;
+    width: 100%;
+    height: 100%;
+    width: 22px;
+    height: 22px;
+    background-image: url(./../../assets/svg/logo.svg);
+    transform: rotate(20deg);
+} */
