--- a/client/src/components/PupilItem/pupilItem.css
+++ b/client/src/components/PupilItem/pupilItem.css
@@ -9,7 +9,7 @@
     cursor: pointer;
 }
 
-.pupilsList__table thead th {
+table thead th {
 	font-weight: bold;
 	text-align: left;
 	border: none;
@@ -17,25 +17,25 @@
 	background: #d8d8d8;
 	font-size: 14px;
 }
-.pupilsList__table thead tr th:first-child {
+table thead tr th:first-child {
 	border-radius: 8px 0 0 8px;
 }
-.pupilsList__table thead tr th:last-child {
+table thead tr th:last-child {
 	border-radius: 0 8px 8px 0;
 }
-.pupilsList__table tbody td {
+table tbody td {
 	text-align: left;
 	border: none;
 	padding: 10px 15px;
 	font-size: 14px;
 	vertical-align: top;
 }
-.pupilsList__table tbody tr:nth-child(even){
+table tbody tr:nth-child(even){
 	background: #f3f3f3;
 }
-.pupilsList__table tbody tr td:first-child {
+table tbody tr td:first-child {
 	border-radius: 8px 0 0 8px;
 }
-.pupilsList__table tbody tr td:last-child {
+table tbody tr td:last-child {
 	border-radius: 0 8px 8px 0;
 }
