--- a/client/src/index.css
+++ b/client/src/index.css
@@ -24,14 +24,14 @@
     display: flex;
     gap: 15px;
     padding: 8px 16px;
-    margin-top: 5px;
+    margin: 5px;
     cursor: pointer;
     align-items: center;
     text-decoration: none;
     border-radius: 5px;
     background-color: rgb(255, 255, 255);
     transition: all 0.5s;
-    border: none;
+    border: 1px solid #28384d;
 }
 
 .btn:hover {
