--- a/client/src/components/Header/header.css
+++ b/client/src/components/Header/header.css
@@ -37,18 +37,5 @@
     font-size: 40px;
     font-weight: 700;
     padding-left: 20px;
+    padding-top: 10px;
 }
-
-/* .header__logo::after {
-    content: '';
-    display: block;
-    position: absolute;
-    right: -7px;
-    top: -7px;
-    width: 100%;
-    height: 100%;
-    width: 22px;
-    height: 22px;
-    background-image: url(./../../assets/svg/logo.svg);
-    transform: rotate(20deg);
-} */
