--- a/client/src/components/Modal/modal.css
+++ b/client/src/components/Modal/modal.css
@@ -20,39 +20,40 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    font-family: Roboto, sans-serif;
 }
 
 .modal__body {
     min-height: 250px;
-    max-width: 650px;
+    max-width: 530px;
     width: 100%;
     background-color: white;
     display: flex;
     position: relative;
-    padding: 10px;
+    padding: 30px;
+    flex-direction: column;
+    border-radius: 10px;
 }
 
 .modal__title {
     margin: 15px auto;
-    font-size: 25px;
-    letter-spacing: 3px;
 }
 
 .close__modal {
     position: absolute;
-    right: 0;
-    top: 0;
-    width: 32px;
-    height: 32px;
+    right: 4px;
+    top: 4px;
+    width: 26px;
+    height: 26px;
     cursor: pointer;
 }
 
 .close__modal::before,
 .close__modal::after {
     position: absolute;
-    left: 15px;
+    left: 10px;
     content: " ";
-    height: 33px;
+    height: 26px;
     width: 2px;
     background-color: black;
 }
@@ -69,6 +70,7 @@
     position: relative;
     display: flex;
     flex-direction: column;
+    text-align: left;
 }
 
 .input-block__wrapper input {
@@ -77,7 +79,11 @@
     border: none;
     padding: 8px 0;
     background-color: transparent;
-    border-bottom: 2.5px solid black;
+    border-bottom: 1px solid black;
     outline: none;
     margin-bottom: 0.6em;
+}
+
+.registration-form {
+    text-align: right;
 }
