--- a/client/src/components/PhotoSlider/photoSlider.css
+++ b/client/src/components/PhotoSlider/photoSlider.css
@@ -46,6 +46,6 @@
       }
       .gallery__slide_active::after {
 
-          background-color: #d8d8d8;
+          background-color: #28384d;
 
       }
