--- a/client/src/components/Setting/setting.css
+++ b/client/src/components/Setting/setting.css
@@ -1,18 +1,15 @@
 .setting-modal {
     position: fixed;
-    transform: translate(-50%, -50%);
-    width: 15%;
-    max-width: 100%;
     justify-content: center;
     display: flex;
     align-items: center;
-    padding: 50px 0;
+    padding: 50px 20px 10px 20px;
     background-color: #fff;
     transition: 0.4s linear;
     overflow: auto;
     flex-wrap: wrap;
-    left:10%;
-    top: 80%;
+    left: 0;
+    bottom: 60px;
     background-color: rgb(92 92 92 / 80%);
     border-radius: 10px;
     display: flex;
