--- a/client/src/components/SideBar/sideBar.css
+++ b/client/src/components/SideBar/sideBar.css
@@ -1,10 +1,14 @@
-.sidebar__ul {
+.sidebar__ul, .sidebar__ul-none {
     list-style: none;
-    padding: 10px;
-    position: relative;
+    padding: 40px 40px 0 10px;
     display: flex;
     flex-direction: column;
     align-items:flex-start;
+}
+.sidebar__ul {
+    position: absolute;
+    transition: 0.5s;
+    left: -200%;
 }
 
 .sidebar__li {
