--- a/client/src/components/Setting/setting.css
+++ b/client/src/components/Setting/setting.css
@@ -1,5 +1,5 @@
 .setting-modal {
-    position: fixed;
+    position: absolute;
     transform: translate(-50%, -50%);
     width: 15%;
     max-width: 100%;
@@ -7,15 +7,13 @@
     display: flex;
     align-items: center;
     padding: 50px 0;
-    background-color: #fff;
     transition: 0.4s linear;
     overflow: auto;
     flex-wrap: wrap;
     left:10%;
-    top: 80%;
+    bottom: 10%;
     background-color: rgb(92 92 92 / 80%);
     border-radius: 10px;
-    display: flex;
     flex-direction: column;
     z-index: 100;
 }
