feat: add news page, add translate to modules

--- a/client/src/components/SideBar/sideBar.css
+++ b/client/src/components/SideBar/sideBar.css
@@ -53,3 +53,6 @@ a {
 .icon-class {
     background: url(./../../assets/svg/class.svg) center center no-repeat;
 }
+.icon-news {
+    background: url(./../../assets/svg/news.svg) center center no-repeat;
+}
