feat: add profile-page

--- a/client/src/components/SideBar/sideBar.css
+++ b/client/src/components/SideBar/sideBar.css
@@ -57,3 +57,7 @@ a {
 .icon-class {
     background-image: url(./../../assets/svg/class.svg);
 }
+
+.icon-profile {
+    background-image: url(./../../assets/svg/profile.svg);
+}
