--- a/client/src/components/Modal/modal.css
+++ b/client/src/components/Modal/modal.css
@@ -3,7 +3,7 @@
     top: 0;
     left: 0;
     width: 100%;
-    height: 100%;
+    height: 50vh;
     background-color: rgba(0, 0, 0, 0.6);
     opacity: 0;
     visibility: hidden;
