--- a/client/src/components/Tabs/tabs.css
+++ b/client/src/components/Tabs/tabs.css
@@ -8,7 +8,7 @@
     font-size: 14px;
 }
 .active {
-    background: #d8d8d8;
+    background: #f1d760;
     box-shadow: 2px 2px 6px #2b1a1a80;
 }
 .tab {
