--- a/client/src/components/SideBar/sideBar.css
+++ b/client/src/components/SideBar/sideBar.css
@@ -57,11 +57,12 @@
 .icon-class {
     background: url(./../../assets/svg/class.svg) center center no-repeat;
 }
-
+.icon-profile {
+    background: url(./../../assets/svg/profile.svg) center center no-repeat;
+}
 .icon-news {
     background: url(./../../assets/svg/news.svg) center center no-repeat;
 }
-
-.icon-profile {
-    background: url(./../../assets/svg/profile.svg) center center no-repeat;
+.icon-grades {
+    background: url(./../../assets/svg/grades.svg) center center no-repeat;
 }
