--- a/client/src/pages/MainPage/mainPage.css
+++ b/client/src/pages/MainPage/mainPage.css
@@ -10,9 +10,9 @@
     gap: 10px;
 }
 
-.main__percents {
+/* .main__percents {
     margin: 20px;
-}
+} */
 
 .main__percents-item {
     width: 30%;
@@ -39,17 +39,14 @@
 .main__percents-20-text {
     margin-top: 10px;
     color: #0e9bd0;
-    font-size: 20px;
 }
 
 .main__percents-80-text {
     margin-top: 10px;
     color: #f81010;
-    font-size: 20px;
 }
 
 .main__percents-15-text {
     margin-top: 10px;
     color: #009646;
-    font-size: 20px;
 }
