--- a/client/src/pages/SchedulePage/schedule.css
+++ b/client/src/pages/SchedulePage/schedule.css
@@ -2,6 +2,14 @@
     margin: 10px;
 }
 
+.schedule__item thead tr th:last-child {
+    width: 200px;
+}
+
+.schedule__item thead tr th:nth-child(2) {
+    width: 120px;
+}
+
 .schedule__list {
     text-align: left;
 }
