--- a/client/src/components/Setting/setting.css
+++ b/client/src/components/Setting/setting.css
@@ -1,21 +1,17 @@
 .setting-modal {
-    position: absolute;
-    transform: translate(-50%, -50%);
-    width: 15%;
-    max-width: 100%;
-    justify-content: center;
     display: flex;
-    align-items: center;
-    padding: 50px 20px 10px 20px;
-    transition: 0.4s linear;
-    overflow: auto;
-    flex-wrap: wrap;
-    left:10%;
-    bottom: 10%;
+    position: fixed;
+    bottom: 10px;
     background-color: rgb(92 92 92 / 80%);
-    border-radius: 10px;
+    border-radius: 16px;
+    padding: 15px;
+    margin: 15px 0px 50px 0px;
     flex-direction: column;
-    z-index: 100;
+    justify-content: space-between;
+    align-items: center;
+    width: auto;
+    z-index: 2;
+    transition: all 0.6s;
 }
 
 .close__modal.close__setting {
