--- a/client/src/components/TogglerTheme/togglerTheme.css
+++ b/client/src/components/TogglerTheme/togglerTheme.css
@@ -3,7 +3,7 @@
     height: 30px;
     transform: translate(0%, -50%);
     display: block;
-    margin: auto;
+    margin: 50px 0 0px 0;
 }
 
 #toggler {
