feat: add profile photo

--- a/client/src/components/Tabs/tabs.css
+++ b/client/src/components/Tabs/tabs.css
@@ -2,7 +2,7 @@
     cursor: pointer;
     background: #f3f3f3;
     font-weight: bold;
-    text-align: left;
+    text-align: center;
     border: none;
     padding: 10px 15px;
     font-size: 14px;
