--- a/client/src/components/PupilItem/pupilItem.css
+++ b/client/src/components/PupilItem/pupilItem.css
@@ -59,6 +59,7 @@ table tbody tr td:last-child {
 	position: absolute;
     right: 0;
     top: 5px;
+    opacity: 0.7;
 }
 .cell__grade span {
 	margin: 10px;
