--- a/client/src/pages/DiaryPage/diary.css
+++ b/client/src/pages/DiaryPage/diary.css
@@ -3,27 +3,27 @@
     grid-template-columns: repeat(2, auto);
 }
 
-.diary__item[data-day="0"] {
+.diary__item[data-greed="0"] {
     grid-column: 1 ;
     grid-row: 1 / 2;
 }
-.diary__item[data-day="1"] {
+.diary__item[data-greed="1"] {
     grid-column: 1 ;
     grid-row: 2 / 3;
 }
-.diary__item[data-day="2"] {
+.diary__item[data-greed="2"] {
     grid-column: 1 ;
     grid-row: 3 / 4;
 }
-.diary__item[data-day="3"] {
+.diary__item[data-greed="3"] {
     grid-column: 2 ;
     grid-row: 1 / 2;
 }
-.diary__item[data-day="4"] {
+.diary__item[data-greed="4"] {
     grid-column: 2 ;
     grid-row: 2 / 3;
 }
-.diary__item[data-day="5"] {
+.diary__item[data-greed="5"] {
     grid-column: 2 ;
     grid-row: 3 / 4;
 }
