feat: add form for adding news

--- a/client/src/components/Modal/modal.css
+++ b/client/src/components/Modal/modal.css
@@ -78,7 +78,7 @@
     font-size: 20px;
     color: black;
     border: none;
-    padding: 8px 0;
+    padding: 8px;
     background-color: transparent;
     border-bottom: 1px solid black;
     outline: none;
