--- a/client/src/components/NewsItem/newsItem.css
+++ b/client/src/components/NewsItem/newsItem.css
@@ -9,11 +9,13 @@
     position: absolute;
     bottom: -10px;
     left: 0;
-    height: 1px;
-    background-color: #28384d;
+    height: 3px;
+    background-color: rgba(0,0,0,0.2);
+    box-shadow: 4px 4px 10px rgb(0 0 0 / 20%);
     opacity: 0.3;
     width: 78%;
     transform: translateX(14%);
+    border-radius: 10px;
 }
 
 .news__desc {
@@ -37,4 +39,10 @@
     object-fit: contain;
     width: 100%;
     border-radius: 10px;
+}
+
+.news__title {
+    display: flex;
+    align-items: center;
+    gap: 20px;
 }
