fead: add grades adding func

--- a/client/src/components/PupilItem/pupilItem.css
+++ b/client/src/components/PupilItem/pupilItem.css
@@ -42,11 +42,11 @@ table tbody tr td:last-child {
 	width: 90px;
 }
 .cell__grade {
-	display: flex;
 	justify-content: space-between;
 	cursor: pointer;
 	position: relative;
 	text-align: center;
+    padding: 0;
 }
 .cell__grade-active {
 	padding: 0;
