--- a/client/src/components/PupilItemInJournal/pupilItemInJournal.css
+++ b/client/src/components/PupilItemInJournal/pupilItemInJournal.css
@@ -3,5 +3,7 @@
     outline: none;
     background-color: inherit;
     width: 100%;
+    height: 52px;
     text-align: center;
+    cursor: pointer;
 }
