feat: add clue, add some style

--- a/client/src/components/HomeWorkInJournal/homeWorkInJournal.css
+++ b/client/src/components/HomeWorkInJournal/homeWorkInJournal.css
@@ -1,3 +1,8 @@
+.homeWorkList__table {
+    overflow: scroll;
+}
+
 .homeWorkList__table table {
-    width: 70%;
+    width: 100%;
+    max-width: 500px;
 }
