--- a/client/src/components/Tabs/tabs.css
+++ b/client/src/components/Tabs/tabs.css
@@ -16,6 +16,7 @@
     gap: 2px;
     justify-content: center;
     margin: 20px auto;
+    overflow: scroll;
 }
 .tablinks:first-child {
 	border-radius: 8px 0 0 8px;
