--- a/client/src/components/PupilItem/pupilItem.css
+++ b/client/src/components/PupilItem/pupilItem.css
@@ -39,7 +39,7 @@ table tbody tr td:first-child {
 }
 table tbody tr td:last-child {
 	border-radius: 0 8px 8px 0;
-	width: 90px;
+	/* width: 90px; */
 }
 .cell__homework {
 	justify-content: space-between;
