--- a/client/src/pages/NewsPage/newsPage.css
+++ b/client/src/pages/NewsPage/newsPage.css
@@ -81,3 +81,7 @@
     opacity: 0.7;
     background: url(./../../assets/svg/upload.svg) center center no-repeat;
 }
+
+.load {
+    background-color: rgb(241, 214, 95);
+}
