--- a/client/src/components/HomeWorkItem/homeWorkItem.css
+++ b/client/src/components/HomeWorkItem/homeWorkItem.css
@@ -4,6 +4,7 @@
 
 .homeWork__item .homework__wrapper {
     width: 100%;
+    height: 40px;
 }
 
 .cell__homework {
@@ -12,6 +13,9 @@
 
 .cell__homework div {
     width: 300px;
+}
+.homeWork__item {
+    height: 40px;
 }
 
 .homeWork__item td {
@@ -29,6 +33,6 @@
     background-size: contain;
 	position: absolute;
     right: 0;
-    top: 5px;
+    top: 10px;
     opacity: 0.7;
 }
