--- a/client/src/components/Layout/layout.css
+++ b/client/src/components/Layout/layout.css
@@ -16,8 +16,8 @@
 }
 
 .content-area {
-    background-color: rgb(255, 255, 255);
-    color: rgba(0, 0, 0, 0.87);
+    background-color: var(--content-bg);
+    color: var(--content-text);
     transition: box-shadow 300ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
     border-radius: 4px;
     box-shadow: rgb(0 0 0 / 20%) 0px 2px 1px -1px, rgb(0 0 0 / 14%) 0px 1px 1px 0px, rgb(0 0 0 / 12%) 0px 1px 3px 0px;
