--- a/client/src/components/PupilItemInJournal/pupilItemInJournal.css
+++ b/client/src/components/PupilItemInJournal/pupilItemInJournal.css
@@ -9,6 +9,7 @@
     cursor: pointer;
     font-size: 16px;
     font-family: Roboto, sans-serif;
+    color: var(--color-text);
 }
 
 .grade__clue {
