--- a/client/src/pages/NewsPage/newsPage.css
+++ b/client/src/pages/NewsPage/newsPage.css
@@ -8,6 +8,7 @@
     background-color: #f1d760;
     box-shadow: 2px 2px 6px #2b1a1a80;
     max-width: 340px;
+    color: black;
 }
 
 .news__form {
