--- a/client/src/components/PupilCard/pupil.css
+++ b/client/src/components/PupilCard/pupil.css
@@ -5,7 +5,7 @@
 }
 
 .pupil__info h3, .pupil__info div {
-    border-bottom: 1px dotted black;
+    border-bottom: 1px dotted var(--color-text);
     padding: 5px 20px;
 }
 
