--- a/client/src/pages/ProfilePage/profile.css
+++ b/client/src/pages/ProfilePage/profile.css
@@ -5,7 +5,7 @@
 }
 
 .profile__info h3, .profile__info div {
-    border-bottom: 1px dotted black;
+    border-bottom: 1px dotted var(--color-text);
     padding: 5px 20px;
 }
 
