--- a/client/src/index.css
+++ b/client/src/index.css
@@ -5,7 +5,7 @@
 }
 
 :root[data-theme="light"] {
-  --bg-header: #5da4a4;
+  --bg-header: #f1d760;;
   --color-text: black;
   --color-setting-btn: #28384d;;
   --option-bg: #28384d;;
@@ -19,7 +19,7 @@
 :root[data-theme="dark"] {
   --bg-header: #28384d;
   --color-text: white;
-  --color-setting-btn: #5da4a4;
+  --color-setting-btn: white;
   --option-bg: #f1d760;
   --option-text: black;
   --content-bg:  #28384d;
