--- a/client/src/components/Header/header.css
+++ b/client/src/components/Header/header.css
@@ -11,6 +11,10 @@
     border-radius: 5px;
 }
 
+.header__logo span {
+    color: rgba(255, 87, 87, 0.747);
+}
+
 .header__button-block {
     display: flex;
     justify-content: space-between;
@@ -39,8 +43,5 @@
 .header__user-name-block {
     display: flex;
     align-items: center;
-    color: var(--color-text);
-}
-.header__username {
     color: var(--color-text);
 }
