--- a/client/src/components/PupilItem/pupilItem.css
+++ b/client/src/components/PupilItem/pupilItem.css
@@ -5,26 +5,17 @@
     overflow: scroll;
 }
 
-.pupilsList__table table {
-	width: 80%;
-}
 .pupil__item_name,
 .teacher__item_name {
     cursor: pointer;
-	width: 25%; 
 }
-.teacher__item_name {
-	margin: auto;
-}
-.pupil__item_birht {
-	width: 15%;
-}
+
 table thead th {
 	font-weight: bold;
 	text-align: left;
 	border: none;
 	padding: 10px;
-	background: var(--table-head-bg);
+	background: #d8d8d8;
 	font-size: 14px;
 }
 table thead tr th:first-child {
@@ -41,17 +32,14 @@ table tbody td {
 	vertical-align: top;
 }
 table tbody tr:nth-child(even){
-	background: var(--table-body-bg);
-}
-.pupilsList__table table tbody tr td:first-child  {
-	width: 0%;
+	background: #f3f3f3;
 }
 table tbody tr td:first-child {
 	border-radius: 8px 0 0 8px;
 }
 table tbody tr td:last-child {
 	border-radius: 0 8px 8px 0;
-	width: 90px;
+	/* width: 90px; */
 }
 .cell__homework {
 	justify-content: space-between;
