--- a/client/src/components/SideBar/sideBar.css
+++ b/client/src/components/SideBar/sideBar.css
@@ -19,7 +19,7 @@
 
 .sidebar__ul-full a {
     text-decoration: none;
-    color: inherit;
+    color: var(--content-text);
     width: 100%;
 }
 
@@ -33,13 +33,13 @@
     align-items: center;
     text-decoration: none;
     border-radius: 5px;
-    background-color: rgb(255, 255, 255);
+    background-color: var(--content-bg);
     transition: all 0.5s;
 }
 
 .sidebar__ul a {
     text-decoration: none;
-    color: inherit;
+    color: var(--content-text);
     width: 100%;
 }
 
