fix: fix height scroll

--- a/client/src/components/CurrentGrades/currentGrade.css
+++ b/client/src/components/CurrentGrades/currentGrade.css
@@ -12,7 +12,7 @@
 }
 
 .currentGrades__table::-webkit-scrollbar{
-    width: 4px;  
+    height: 5px;  
 }
 
 .currentGrades__table::-webkit-scrollbar-track {
