feat: add schoolPage, add Map

--- a/client/src/components/SideBar/sideBar.css
+++ b/client/src/components/SideBar/sideBar.css
@@ -79,3 +79,6 @@
 .icon-grades {
     background: url(./../../assets/svg/grades.svg) center center no-repeat;
 }
+.icon-school {
+    background: url(./../../assets/svg/school.svg) center center no-repeat;
+}
