--- a/client/src/components/InputHomeWork/inputHomeWork.css
+++ b/client/src/components/InputHomeWork/inputHomeWork.css
@@ -11,10 +11,10 @@
     font-size: 10px;
     box-shadow: inset 2px 2px 2px rgb(0 0 0 / 10%);
     border-radius: 4px;
-    padding: 5px;
+    padding: 9px;
     background-color: white;
     cursor: pointer;
-    width: 90px;
+    width: 100%;
 }
 
 .apply__icon, .cancel__icon {
