--- a/client/src/components/PupilItemInJournal/pupilItemInJournal.css
+++ b/client/src/components/PupilItemInJournal/pupilItemInJournal.css
@@ -12,6 +12,25 @@
     color: var(--color-text);
 }
 
+.input__grade-loading {
+    width: 100%;
+    height: 52px;
+    text-align: center;
+    cursor: pointer;
+    border: none;
+    opacity: 0.5;
+    background: var(--table-body-bg);
+    box-shadow: 0 -52px 20px -20px var(--table-head-bg) inset;
+    animation: gradient 0.8s infinite alternate;
+}
+
+@keyframes gradient {
+    50% {
+        background: var(--table-body-bg);
+        box-shadow: 0 -52px 20px -20px var(--bg-header) inset;
+    }
+}
+
 .grade__clue {
     opacity: 0;
     background-color: #28384d23;;
