fix: fix gradient for dark theme

--- a/client/src/components/PupilItemInJournal/pupilItemInJournal.css
+++ b/client/src/components/PupilItemInJournal/pupilItemInJournal.css
@@ -19,15 +19,15 @@
     cursor: pointer;
     border: none;
     opacity: 0.5;
-    background: var(--table-body-bg);
-    box-shadow: 0 -52px 20px -20px var(--table-head-bg) inset;
+    background: var(--table-head-bg);
+    box-shadow: 0 -5px 20px -20px var(--table-head-bg) inset;
     animation: gradient 0.8s infinite alternate;
 }
 
 @keyframes gradient {
     50% {
         background: var(--table-body-bg);
-        box-shadow: 0 -52px 20px -20px var(--bg-header) inset;
+        box-shadow: 0 -52px 20px -20px #f1d760 inset;
     }
 }
 
