feat: add 'more' btn for homework

--- a/client/src/components/PupilsInJournal/pupilsInJournal.css
+++ b/client/src/components/PupilsInJournal/pupilsInJournal.css
@@ -3,6 +3,7 @@
     scroll-snap-type: x proximity;
     height: auto;
     padding: 10px 0;
+    margin-bottom: 20px;
 }
 
 .pupilsInJournal__table::-webkit-scrollbar{
