--- a/client/src/pages/NewsPage/newsPage.css
+++ b/client/src/pages/NewsPage/newsPage.css
@@ -33,7 +33,7 @@
 
 .news_header {
     display: flex;
-    gap: 20px;
+    gap: 40px;
     align-items: center;
 }
 
@@ -61,13 +61,13 @@
 .input__file-button-text {
     display: flex;
     gap: 10px;
-    padding: 5px;
+    padding: 5px 10px;
     margin: 5px;
     cursor: pointer;
     align-items: center;
     text-decoration: none;
     border-radius: 5px;
-    background-color: rgb(255, 255, 255);
+    background-color: #f3f3f3;
     transition: all 0.5s;
     border: 1px solid #28384d;
 }
@@ -85,4 +85,9 @@
 
 .load {
     background-color: rgb(241, 214, 95);
+}
+
+.addnews__btn {
+    display: flex;
+    align-items: center;
 }
