--- a/client/src/pages/JournalPage/journalPage.css
+++ b/client/src/pages/JournalPage/journalPage.css
@@ -21,6 +21,7 @@
 .homework__less-button-img {
     width: 30px;
     height: 30px;
+    margin: -6px;
     opacity: 0.7;
     background: url(./../../assets/svg/less.svg) center center no-repeat;
 }
@@ -28,6 +29,7 @@
 .homework__more-button-img {
     width: 30px;
     height: 30px;
+    margin: -6px;
     opacity: 0.7;
     background: url(./../../assets/svg/more.svg) center center no-repeat;
 }
