--- a/client/src/pages/ProfilePage/profile.css
+++ b/client/src/pages/ProfilePage/profile.css
@@ -1,7 +1,9 @@
 .profile__content {
+    margin-top: 10px;
     display: flex;
     gap: 20px;
     align-items: center;
+    justify-content: center;
 }
 
 .profile__info h3, .profile__info div {
